# ml-detect-sleep-states

./: Makefile  README.md  pyproject.toml
detect_sleep_states/: __init__.py  dataset.py  features.py  plots.py
detect_sleep_states/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: ml-classification-problem-detect-sleep-states.ipynb  ml-regression-problem-time-series.ipynb
